--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,19 @@
 {
     "name": "croox/wp-dev-env-frame",
+    "homepage": "https://github.com/croox/wp-dev-env-frame",
     "description": "some frame for wp-dev-env",
-    "version": "0.0.3",
-    "license": "GNU General Public License v2 or later",
+    "version": "0.0.4",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "jhotadhari",
             "email": "tellme@waterproof-webdesign.info"
         }
     ],
-    "require": {}
+    "require": {},
+	"autoload": {
+		"psr-4": {
+			"croox\\wde\\": "src"
+		}
+	}
 }
